--- a/Components/Input.razor
+++ b/Components/Input.razor
@@ -6,7 +6,7 @@
                 <button type="button" class="btn-close" aria-label="Close" @onclick="@Cancel"></button>
             </div>
             <div class="modal-body">
-                <input class="form-control bg-light text-dark" type="text" @onkeydown="@Enter" @bind="@Value" @oninput="@((e) => { ReturnValue=(string)e.Value;})" />
+                <input class="form-control bg-light text-dark" type="text" @onkeydown="@Enter" @bind="@Value" @oninput="@((e) => { ReturnValue=e.Value?.ToString();})" />
             </div>
             <div class="modal-footer">                
                 <button type="button" class="btn btn-primary"
@@ -22,11 +22,11 @@
     </div>
 </div>
 @code {
-    [Parameter] public string Caption { get; set; }
-    [Parameter] public string Value { get; set; }
+    [Parameter] public string? Caption { get; set; }
+    [Parameter] public string? Value { get; set; }
     [Parameter] public EventCallback<string> OnClose { get; set; }
 
-    public string ReturnValue { get; set; }
+    public string? ReturnValue { get; set; }
 
     private Task Cancel()
     {
@@ -37,13 +37,12 @@
         return OnClose.InvokeAsync(ReturnValue);
     }
 
-
     public Task Enter(KeyboardEventArgs e)
     {
         if (e.Code == "Enter" || e.Code == "NumpadEnter")
         {
             return OnClose.InvokeAsync(ReturnValue);
         }
-        return null;
+        return Task.CompletedTask;
     }
 }
