Renamed namespace from `Cosmos.Chat` to `Cosmos.Chat.GPT`

--- a/Pages/ChatPane.razor
+++ b/Pages/ChatPane.razor
@@ -1,4 +1,4 @@
-﻿@using Cosmos.Chat.Services
+﻿@using Cosmos.Chat.GPT.Services
 @using Humanizer
 @inject ChatService chatService
 @inject IJSRuntime JSRuntime
