--- a/Pages/_Layout.cshtml
+++ b/Pages/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
-@namespace Cosmos.Chat.Pages
+@namespace Cosmos.Chat.GPT.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!doctype html>
