--- a/_Imports.razor
+++ b/_Imports.razor
@@ -6,7 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using Cosmos.Chat
-@using Cosmos.Chat.Models
-@using Cosmos.Chat.Shared
-@using Cosmos.Chat.Components
+@using Cosmos.Chat.GPT
+@using Cosmos.Chat.GPT.Models
+@using Cosmos.Chat.GPT.Shared
+@using Cosmos.Chat.GPT.Components
