--- a/Pages/ChatPane.razor
+++ b/Pages/ChatPane.razor
@@ -97,6 +97,7 @@
                                     <small>@msg.TimeStamp.Humanize()</small>
                                 </div>
                                 <div class="toast-body">
+                                    <i class="bi bi-grip-vertical mr-2 text-black-50"></i>
                                     @msg.Text
                                 </div>
                             </div>
