Harmonizing some function names and other fixes.

--- a/Pages/ChatPane.razor
+++ b/Pages/ChatPane.razor
@@ -80,7 +80,7 @@
                             Get Started
                         </h4>
                         <p class="text-nowrap mb-0 fst-italic">
-                            Start chatting with the bot.
+                            Start chatting with your helpful AI assistant.
                         </p>
                     </div>
                 }
