--- a/Pages/NavMenu.razor
+++ b/Pages/NavMenu.razor
@@ -39,9 +39,9 @@
                         @foreach (var session in ChatSessions)
                         {
                             <div class="col">
-                                <div class="card @(IsActiveSession(session.SessionId) ? "bg-primary text-light" : "bg-primary opacity-50 text-light")" @onclick="@(e => LoadChat(session.SessionId,session.Name))">
+                                <div class="card @(IsActiveSession(session.SessionId) ? "bg-primary text-light" : "bg-primary opacity-50 text-light")" @onclick="@(e => LoadChat(session.SessionId,session.Name, session.TokensUsed))">
                                     <div class="card-body">
-                                        <a class="card-title text-decoration-none h6" @onclick="@(e => LoadChat(session.SessionId,session.Name))">
+                                        <a class="card-title text-decoration-none h6" @onclick="@(e => LoadChat(session.SessionId,session.Name, session.TokensUsed))">
                                             @if (IsActiveSession(session.SessionId))
                                             {
                                                 <i class="bi bi-chat-right-dots-fill me-2"></i>
@@ -53,6 +53,11 @@
                                     </div>
                                     <div class="card-footer d-flex align-items-between">
                                         <span class="flex-grow-1"></span>
+                                        <div class="align-items-between">
+                                        <span class="me-2 badge rounded-pill bg-light" >
+                                            Tokens Used: @session.TokensUsed
+                                        </span>
+                                        </div>
                                         <div class="btn-group" role="group">
                                             <button type="button" class="btn btn-sm btn-link text-light" @onclick="@(e => OpenInput(session.SessionId,session.Name))">
                                                 <i class="bi bi-pencil-fill me-1"></i>
@@ -184,6 +189,7 @@
                 {
                     CurrentSession.SessionId = match.SessionId;
                     CurrentSession.Name = match.Name;
+                    CurrentSession.TokensUsed = match.TokensUsed;
                 }
             }
 
@@ -260,6 +266,7 @@
             {
                 CurrentSession.SessionId = match.SessionId;
                 CurrentSession.Name = match.Name;
+                CurrentSession.TokensUsed = match.TokensUsed;
             }
         }
 
@@ -288,6 +295,7 @@
                 {
                     CurrentSession.SessionId = match.SessionId;
                     CurrentSession.Name = match.Name;
+                    CurrentSession.TokensUsed = match.TokensUsed;
                 }
             }            
         }
@@ -297,7 +305,7 @@
         return 0;
     }
 
-    async private Task<int> LoadChat(string _sessionId, string sessionName)
+    async private Task<int> LoadChat(string _sessionId, string sessionName, int? tokensUsed)
     {
         if (ChatSessions is null) return 0;
 
@@ -305,7 +313,8 @@
            CurrentSession = new Session();
 
         CurrentSession.SessionId = _sessionId;
-        CurrentSession.Name = sessionName;            
+        CurrentSession.Name = sessionName;
+        CurrentSession.TokensUsed = tokensUsed;
 
         await LoadCurrentChatAsync();
 
